# nix-lock

./: .gitignore  README.md  default.nix  lock.nix  requirements.nix  requirements.txt  setup.cfg  setup.nix  shell.nix
nix_lock/: cli.py  derivations.py  schema.py  update.py
nix_lock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: derivations.toml  test_loader.py  test_locking.py
