[metadata]
name = nix-lock
version = 1.0

[options]
setup_requires =
    pytest-runner
install_requires =
    crayons
    httpx
    marshmallow
    tomlkit
tests_require =
    pytest
py_modules =
    nix_lock

[options.entry_points]
console_scripts =
    nix-lock = nix_lock.cli:main

[aliases]
test = pytest
