[metadata]
name = nix-lock
version = 1.0

[options]
setup_requires =
    pytest-runner
install_requires =
    crayons
    httpx
    marshmallow
    marshmallow-union
    tomlkit
tests_require =
    pytest
    python-language-server
py_modules =
    nix_lock

[options.entry_points]
console_scripts =
    nix-lock = nix_lock.cli:main

[aliases]
test = pytest

[pycodestyle]
max-line-length = 88

[pylint.MESSAGES CONTROL]
disable =
 bad-continuation
 bad-whitespace
